--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,14 @@
 
 # misc
 .DS_Store
+
+# Arquivos de ambiente
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 .env.local
 .env.development.local
 .env.test.local
