--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-favicon": "^2.0.7",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
