--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "semver": "^7.7.1",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
     "ws": "^8.18.1"
