--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "semver": "^7.7.1",
